# indieseas

./: .gitignore  README.md  docker-compose.yml  drizzle.config.ts  index.ts  keepOn.bat  keepOn.sh  package.json  restartDB.bat  restartDB.sh  scrapeWebsite.ts  scraper.ts  scraperWorker.ts  search.tsx  status.ts  worker.js
api/: Cargo.toml
api/src/: main.rs
caddy/: Caddyfile
db/: db.ts  schema.ts
frontend/: astro.config.mjs  package-lock.json  package.json  svelte.config.js  vite.config.js
frontend/src/assets/: button.aseprite
frontend/src/components/: AllButtons.astro  Button.astro  ButtonInfo.astro  Graph.svelte  Index.astro  IndexedInfo.astro  IsIndexed.astro  IsIndexedForm.astro  RandomWebsite.astro  Search.astro  Searchbar.astro
frontend/src/layouts/: Layout.astro
frontend/src/pages/: buttons.astro  check-form.astro  check.astro  index.astro  random.astro  search.astro  wikipedia.astro
frontend/src/pages/api/: allButtons.ts  buttonSearch.ts  getButton.ts  getButtonInfo.ts  isIndexed.ts  randomWebsite.ts  search.ts  stats.ts  vote.ts
imageworker/: index.ts  package-lock.json  package.json
indiescraper/: Cargo.toml
indiescraper/src/: colorize.rs  declutter.rs  main.rs  nekoweb-urls.json  robots.rs
machine_learning/: main.py  test.py
machine_learning/data_collection/: .gitignore  1000_top_corporate_websites.csv  README.md  convert_to_jpg.ts  corporate.ts  indie.ts  nekoweb-urls.json  package-lock.json  package.json
scraper/: colors.go  db.go  declutter.go  fetch.go  go.mod  go.sum  main.go  prompt.txt  robots.go  schema.go  scrape.go  utils.go
utils/: Dockerfile  checkRobotsTxt.ts  colorizeButton.ts  fetch.ts  lemmatize.ts  package-lock.json  package.json  vectorize.ts
