[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.44.2", features = ["full"] }
serde = "1.0.219"
serde_derive = "1.0.219"
serde_json = "1.0.140"
axum = "0.8.4"
sqlx = { version = "0.8.5", features = ["runtime-async-std", "postgres", "runtime-tokio-rustls", "chrono"], default-features = false } 
dotenv = "0.15.0"
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
tower-http = { version = "0.6.4", features = ["cors"] }
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
chrono = { version = "0.4.41", features = ["serde"] }
tokio-util = "0.7.15"
http-body-util = "0.1.3"
