[package]
name = "indiescraper"
version = "0.1.0"
edition = "2024"

[dependencies]
async-std = "1.13.1"
dotenv = "0.15.0"
image = "0.25.6"
once_cell = "1.21.3"
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
scraper = "0.23.1"
serde = "1.0.219"
serde_derive = "1.0.219"
serde_json = "1.0.140"
sqlx = { version = "0.8.5", features = ["runtime-async-std", "postgres"] } 
tokio = { version = "1.44.2", features = ["full"] }
url = "2.5.4"
urlencoding = "2.1.3"
